# shim-interface-core

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cross-extension-umbrellas.toml
src/: hashes.rs  lib.rs  migrations.rs  owner.rs  schema.sql  version.rs  walker.rs
src/migrations/: v1_to_v2.sql  v2_to_v3.sql  v3_to_v4.sql
tests/: spatial_catalog_diff.rs
