[package]
name = "shim-interface-core"
version = "0.1.0"
edition = "2021"
description = "Library: extract a DataFission wasm shim's SQL surface into a SQLite database. Consumed by per-shim binary crates (postgis-shim-interface, mobilitydb-shim-interface) and by downstream bridge-gen tooling (sqlink / ducklink)."
license = "Apache-2.0"

[dependencies]
datafission-df-plugin-api = { path = "../datafission/crates/df-plugin-api" }
datafission-df-plugin-loader = { path = "../datafission/crates/df-plugin-loader" }
datafission-functions = { path = "../datafission/crates/functions" }
datafission-index = { path = "../datafission/crates/index" }

anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
blake3 = "1"
walkdir = "2"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
# Binaries only — kept optional to avoid bloating library consumers.
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "spatial-catalog-diff"
path = "src/bin/spatial-catalog-diff.rs"

[dev-dependencies]
tempfile = "3"
